# totp-auth

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  README.txt  vcpkg.json
src/: main.cpp  totp.h
